@@ -1,8 +1,8 @@
 Check compile time library version
-check_compiletime_version:"3.6.1"
+check_compiletime_version:"3.6.2"
 
 Check runtime library version
-check_runtime_version:"3.6.1"
+check_runtime_version:"3.6.2"
 
 Check for MBEDTLS_VERSION_C
 check_feature:"MBEDTLS_VERSION_C":0
